--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -29,5 +29,8 @@
    },
    "[css]": {
       "editor.defaultFormatter": "vscode.css-language-features"
+   },
+   "[html]": {
+      "editor.defaultFormatter": "esbenp.prettier-vscode"
    }
 }
